ros2_ws/log/build_2025-02-26_05-01-42/turtlebot3_avoidance/stderr.log
  File "/home/naomichen/ros2_ws/install/turtlebot3_avoidance/lib/python3.10/site-packages/turtlebot3_avoidance/obstacle_avoidance.py", line 6
    	def__init__(self):
    	                 ^
SyntaxError: invalid syntax

